# cargo-markdown-versions

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: configuration.rs  main.rs  options.rs
