[package]
name = "cargo-markdown-versions"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
anyhow = "1.0.80"
cargo_metadata = "0.18.1"
clap = { version = "4.5.1", features = ["derive"] }
git2 = { version = "0.18.2", default-features = false }
log = "0.4.20"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["parsing"] }
ureq = { version = "2.9.6", features = ["json"] }

[package.metadata.markdown-versions]
method = "git"